# s25client

./: CMakeLists.txt
.github/workflows/: release.yml
RTTR/gamedata/: default.lua
doc/: AddingCustomCampaign.md
gameDataCreator/: CMakeLists.txt  GameDataFile.cpp  GameDataFile.h  addNewData.cpp  addNewData.h  gameDataCreator.cpp  gameDataTest.cpp  simpleLuaData.cpp  simpleLuaData.h  simpleLuaParser.cpp  simpleLuaParser.h  testGameDataCreate.cpp  testSimpleLuaData.cpp
gameDataCreator/gameData/: BuildingConsts.cpp  BuildingConsts.h  DoorConsts.h  NationConsts.h
gameDataCreator/gameTypes/: OldBuildingType.h
rttrConfig/: files.h
src/: BasePlayerInfo.cpp  BasePlayerInfo.h  BuildingConsts.h  BuildingConstsLegacy.h  BuildingRegister.cpp  BuildingRegister.h  CMakeLists.txt  EventManager.cpp  FOWObjects.cpp  FOWObjects.h  FindWhConditions.cpp  GameLobby.cpp  GameLobby.h  GameLobbyController.cpp  GameLobbyController.h  GameManager.cpp  GamePlayer.cpp  GamePlayer.h  JoinPlayerInfo.cpp  LegacyConsts.h  Loader.cpp  Loader.h  PreviewMinimap.cpp  Properties.h  PropertyLoader.cpp  PropertyLoader.h  Replay.cpp  SavedFile.cpp  SavedFile.h  Savegame.cpp  SerializedGameData.cpp  SerializedGameData.h  TerrainRenderer.cpp  Ware.cpp  Window.cpp  Window.h  XmlSerializer.cpp  XmlSerializer.h  iwAction.cpp  iwBuildingSite.cpp  (+6 more)
src/ai/: AIInterface.h
src/ai/aijh/: AIPlayerJH.cpp  AIPlayerJH.h  Jobs.cpp  PositionSearch.cpp
src/buildings/: noBaseBuilding.cpp  noBaseBuilding.h  noBuilding.cpp  noBuilding.h  noBuildingSite.cpp  nobBaseWarehouse.cpp  nobHQ.cpp  nobHarborBuilding.cpp  nobMilitary.cpp  nobUsual.cpp
src/controls/: ctrlBuildingIcon.cpp  ctrlBuildingIcon.h  ctrlTab.h
src/desktops/: dskCredits.cpp  dskCredits.h  dskGameInterface.cpp  dskGameLoader.cpp  dskHostGame.cpp  dskHostGame.h  dskSelectMap.cpp  dskTextureTest.cpp
src/factories/: BuildingFactory.h
src/figures/: noFigure.cpp  nofArmorer.cpp  nofBaker.cpp  nofBrewer.cpp  nofBuilder.cpp  nofBuildingWorker.cpp  nofButcher.cpp  nofCarpenter.cpp  nofCarrier.cpp  nofCatapultMan.cpp  nofDonkeybreeder.cpp  nofIronfounder.cpp  nofMetalworker.cpp  nofMiller.cpp  nofMiner.cpp  nofMinter.cpp  nofPigbreeder.cpp  nofWellguy.cpp
src/gameData/: BuildingConsts.h  BuildingConstsLegacy.h  BuildingProperties.cpp  BuildingProperties.h  GameDataLoader.h  IDataNode.cpp  IDataNode.h  JobConsts.h  MilitaryConsts.h  NationData.h  PropertyLoader.cpp  PropertyLoader.h  XmlNode.cpp  XmlNode.h  XmlSerializer.cpp  XmlSerializer.h
src/gameTypes/: Inventory.h  Nation.h  SettingsTypes.h
src/ingameWindows/: iwAIDebug.cpp  iwAction.cpp  iwAction.h  iwBaseWarehouse.cpp  iwBuildOrder.cpp  iwBuilding.cpp  iwBuildingProductivities.cpp  iwBuildingProductivities.h  iwBuildingSite.cpp  iwBuildings.cpp  iwDemolishBuilding.cpp  iwDistribution.cpp  iwMapGenerator.cpp  iwMilitaryBuilding.cpp  iwShip.cpp  iwStatistics.cpp  iwTransport.cpp  iwWares.cpp
src/libGamedata/: CMakeLists.txt
src/libGamedata/gameData/: AnimationDesc.cpp  AnimationDesc.h  ArchiveEntryRef.h  BuildingBPDesc.cpp  BuildingBPDesc.h  BuildingDesc.cpp  BuildingDesc.h  BuildingNames.cpp  BuildingNames.h  DescriptionContainer.h  NatBuildingDesc.cpp  NatBuildingDesc.h  NationDesc.cpp  NationDesc.h  WorldDescription.h
src/libGamedata/gameTypes/: BuildingType.h  BuildingTypes.h  GoodTypes.h  JobTypes.cpp  JobTypes.h
src/libGamedata/lua/: CheckedLuaTable.cpp  CheckedLuaTable.h  GameDataLoader.cpp  GameDataLoader.h  LuaInterfaceBase.cpp  LuaInterfaceBase.h  LuaTraits.h  NationDataLoader.cpp  NationDataLoader.h  PointTraits.h
src/lua/: LuaPlayer.cpp  LuaPlayerBase.h
src/mapGenerator/: RandomMapGenerator.cpp
src/network/: ClientInterface.h  GameClient.cpp  GameClient.h  GameClientCommands.cpp  GameMessages.cpp  GameMessages.h  GameServer.cpp  IGameLobbyController.h
src/nodeObjs/: noFlag.cpp  noShip.cpp
src/ogl/: ITexture.h  glSmartBitmap.h
src/test/: CMakeLists.txt  CreateEmptyWorld.cpp  CreateSeaWorld.cpp  GameWithLuaAccess.h  initTestHelpers.h  testGameData.cpp  testObjectGenerator.cpp
src/world/: GameWorld.cpp  GameWorldBase.cpp  GameWorldGame.cpp  GameWorldView.cpp  MapLoader.cpp  MapLoader.h  MapSerializer.cpp
(+58 files in other folders)
